--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "swiper": "^6.7.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vuex": "^3.4.0"
