--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^2.0.0",
     "core-js": "^3.6.5",
     "swiper": "^6.7.0",
     "vue": "^2.6.11",
@@ -21,6 +22,7 @@
     "@vue/cli-service": "~4.5.0",
     "axios": "^0.18.0",
     "vue-cli-plugin-axios": "~0.0.4",
+    "vue-cli-plugin-fontawesome": "~0.3.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
