--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^2.0.0",
+    "@mdi/font": "5.9.55",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "roboto-fontface": "*",
     "swiper": "^6.7.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
+    "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -23,11 +28,13 @@
     "axios": "^0.18.0",
     "vue-cli-plugin-axios": "~0.0.4",
     "vue-cli-plugin-fontawesome": "~0.3.1",
+    "vue-cli-plugin-vuetify": "~2.4.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not dead"
+    "not dead",
+    "not ie <= 10"
   ]
 }
